@@ -15,7 +15,7 @@ $(outdir)/%.ly: %.abc
 
 # hmm. notdir builds src-dir builds?
 $(outdir)/%.png $(outdir)/%.pdf $(outdir)/%.ly $(outdir)/%.ps: $(outdir)/%.ly
-	cd $(outdir); $(LILYPOND_BINARY) --pdf --png -danti-alias-factor=2 -ddelete-intermediate-files -dno-point-and-click -I $(call absdir,$(src-dir))/ $(notdir $<)
+	cd $(outdir); $(LILYPOND_BINARY) --pdf --png -ddump-signatures -danti-alias-factor=2 -ddelete-intermediate-files -dno-point-and-click -I $(call absdir,$(src-dir))/ $(notdir $<)
 	touch $(outdir)/$(basename $(notdir $<)).png
 
 $(outdir)/%.ly: %.ly
